welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: ')' expected but ';' found.
		set(getY();C)
                          ^ZigZag:6: error: ';' expected but ')' found.
		set(getY();C)
                            ^