welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var Val = 0
var C =0

	while (!(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1)) {
		set(getY();C)
		for (i<- 0 to 5) {
				ecritMessage(Val)
				setPos(getX()+1,getY())
				Val=Val+1
		}
			ecritMessage(Val)
			C=C+1
			Val= Val+1
			
	}
}
